Debugging-Lab/pod-network/scenario-03/pod-b.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-b
  labels:
    app: pod-b
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
