Debugging-Lab/pod-network/scenario-03/test-pod-a.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-a
  namespace: ns-a
  labels:
    app: test-pod-a
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
