Debugging-Lab/pod-network/scenario-03/test-pod-b.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-b
  namespace: ns-b
  labels:
    app: test-pod-b
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
